--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,8 +22,9 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:28.0.0'
-    api 'com.squareup.okhttp3:okhttp:3.11.0'
-    api 'com.google.code.gson:gson:2.8.5'
+    api 'com.squareup.okhttp3:okhttp:3.9.0'
+    api 'com.google.code.gson:gson:2.6.2'
+    implementation files('libs/HeWeather_Public_Android_V3.1.jar')
     api 'com.github.bumptech.glide:glide:4.9.0'
     api 'org.litepal.android:core:1.4.1'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
